INCLUDES = -I$(top_srcdir)/src

include_HEADERS = 		check.h \
				math.t.cc \
				simulation.t.cc

lib_LTLIBRARIES = 

bin_PROGRAMS =			

#check_PROGRAMS = 		simple

#simple_SOURCES = 		simple.cc

#simple_LDADD =			../src/simulation/libsimulation.la \
#				../src/algorithm/libalgorithm.la \
#				../src/interaction/libinteraction.la \
#				../src/math/libmath.la \
#				../src/io/libio.la


#simple_CXXFLAGS =

#TESTS =				simple

EXTRA_DIST =			data/rasn.topo  data/rasn.coord data/rasn.in \
				data/rasn.hbond data/rasn.qbond data/rasn.angle \
				data/rasn.improper data/rasn.dihedral \
				data/rasn.nonbonded data/rasn.pl \
				data/rasn.pert

