INCLUDES = -I$(top_srcdir)/src

include_HEADERS =

bin_PROGRAMS =			md

md_SOURCES =			md.cc
md_LDADD = \
				../src/topology/libgrotopology.la \
				../src/io/libgroio.la \
				../src/algorithm/libgroalgorithm.la \
				../src/configuration/libgroconfiguration.la \
				../src/interaction/libgrointeraction.la \
				../src/math/libgromath.la \
				../src/simulation/libgrosimulation.la \
				../src/util/libgroutil.la


