add_subdirectory(algorithm)
add_subdirectory(check)
add_subdirectory(configuration)
if(GPU_ENABLED)
    add_subdirectory(gpu)
endif()
add_subdirectory(interaction)
add_subdirectory(io)
add_subdirectory(math)
add_subdirectory(replicaExchange)
add_subdirectory(simulation)
add_subdirectory(topology)
add_subdirectory(util)
