AM_CXXFLAGS = @MY_CXXFLAGS@
INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)

xxincludedir = $(includedir)/md++/simulation
xxinclude_HEADERS =	simulation.h\
	multibath.h\
	parameter.h

noinst_LTLIBRARIES = libgrosimulation.la

libgrosimulation_la_SOURCES =	simulation.cc\
	multibath.cc

bin_PROGRAMS =			

check_PROGRAMS =

TESTS =

